--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="js-basic/js-basic4.js"></script>
+    <script defer src="greedy/test3.js"></script>
 </head>
 <body>
     
